<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_check_gps">Отметить на GPS</string>
    <string name="action_download_in_garage">Загрузить транспорт в гараж</string>
    <string name="action_download_on_last_place">Загрузить транспорт на месте выгрузки</string>
    <string name="action_download_on_parking">Загрузить транспорт на парковке</string>
    <string name="action_grant_access">Выдать доступ</string>
    <string name="action_remove_from_family">Вернуть из семьи</string>
    <string name="action_reset_parking">Сбросить парковку</string>
    <string name="action_unload">Выгрузить транспорт</string>
    <string name="addition_download_patch_data">"Обновление:
 %1$s"</string>
    <string name="admin_tools_add">Добавить</string>
    <string name="admin_tools_add_new_pattern">Добавить шаблон</string>
    <string name="admin_tools_back">Назад</string>
    <string name="admin_tools_ban">BAN</string>
    <string name="admin_tools_cancel">Отмена</string>
    <string name="admin_tools_categories_title_add_template">Выберите категорию для добавления шаблона</string>
    <string name="admin_tools_categories_title_show_template">Выберите категорию для просмотра шаблонов</string>
    <string name="admin_tools_change_answer">Выбрать ответ</string>
    <string name="admin_tools_choose">Выбрать</string>
    <string name="admin_tools_clear">Очистить</string>
    <string name="admin_tools_control_panel_title">Панель управления Admin Tools</string>
    <string name="admin_tools_create_a_form">Подать форму</string>
    <string name="admin_tools_create_pattern_title">Добавление нового шаблона</string>
    <string name="admin_tools_edit">Редактировать</string>
    <string name="admin_tools_edit_pattern_title">Редактирование шаблона</string>
    <string name="admin_tools_get_out">Выйти</string>
    <string name="admin_tools_jail">Jail</string>
    <string name="admin_tools_kick">Kick</string>
    <string name="admin_tools_mute">Mute</string>
    <string name="admin_tools_pattern_body">Текст шаблона</string>
    <string name="admin_tools_pattern_title">Название шаблона</string>
    <string name="admin_tools_player_id_and_player_name">[%1$d] %2$s</string>
    <string name="admin_tools_player_info_armor">Броня</string>
    <string name="admin_tools_player_info_hp">Здоровье</string>
    <string name="admin_tools_player_info_level">Уровень</string>
    <string name="admin_tools_player_info_money">Деньги</string>
    <string name="admin_tools_player_info_ping">Пинг</string>
    <string name="admin_tools_player_info_speed">Скорость</string>
    <string name="admin_tools_player_info_transport_strength">Прочность</string>
    <string name="admin_tools_player_information">Информация об игроке</string>
    <string name="admin_tools_punishment_time_days">Время наказания (дни)</string>
    <string name="admin_tools_punishment_time_min">Время наказания (минуты)</string>
    <string name="admin_tools_report_hint_text">Текст жалобы</string>
    <string name="admin_tools_report_table_title">Выберите шаблон ответа на репорт от игрока: %1$s [%2$d]</string>
    <string name="admin_tools_report_template_title_text">Отправить ответ шаблон %1$s</string>
    <string name="admin_tools_report_title_text">Жалоба от игрока: %1$s [%2$d]</string>
    <string name="admin_tools_report_your_answer_button">Свой ответ</string>
    <string name="admin_tools_report_your_answer_hint">Введите сообщение…</string>
    <string name="admin_tools_report_your_answer_title">Введите ответ на репорт</string>
    <string name="admin_tools_save">Сохранить</string>
    <string name="admin_tools_select_the_reason_for_the_punishment">Выберите причину наказания</string>
    <string name="admin_tools_send">Отправить</string>
    <string name="admin_tools_show_all_patterns">Просмотр всех шаблонов</string>
    <string name="admin_tools_slap">Slap</string>
    <string name="admin_tools_statistic">Статистика</string>
    <string name="admin_tools_table_title_before_category">Все шаблоны ответов</string>
    <string name="admin_tools_table_title_with_category">%1$s: Все шаблоны</string>
    <string name="admin_tools_template_add_new_title_before_category">Добавление нового шаблона</string>
    <string name="admin_tools_template_add_new_title_with_category">%1$s: Добавление нового шаблона</string>
    <string name="admin_tools_template_editing_title_before_category">Редактирование шаблона</string>
    <string name="admin_tools_template_editing_title_with_category">%1$s: Редактирование шаблона</string>
    <string name="admin_tools_tracking_panel_table_title">%1$s: Выберите причину наказания</string>
    <string name="admin_tools_warn">Warn</string>
    <string name="admin_tools_your_report">Свой отчет</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">NEIZZIR</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appmetrica_after_work">При окончании рабочего дня на подработке, при этом сумма заработка составляет более 30.000 рублей.</string>
    <string name="appmetrica_bought_accessory">Если игрок приобрел в магазине аксессуаров предмет дороже 200.000 рублей.</string>
    <string name="appmetrica_bought_business">Купил бизнес</string>
    <string name="appmetrica_bought_car">Купил транспортное средство</string>
    <string name="appmetrica_bought_clothes">Если игрок приобрел в магазине одежды предмет дороже 300.000 рублей.</string>
    <string name="appmetrica_bought_house">Купил дом/квартиру/гараж</string>
    <string name="appmetrica_bought_something_in_donate">Если игрок приобрел в донате скин, аксессуар, услугу или VIP аккаунт стоимостью больше 300 BC.</string>
    <string name="appmetrica_donate">Донат от 1000 руб</string>
    <string name="appmetrica_got_increase_in_fraction">Получил повышение во фракции через фракционное задание</string>
    <string name="appmetrica_joined_family_or_fraction">Вступил во фракцию или принят в семью</string>
    <string name="appmetrica_opened_case">Открытие окупаемого кейса</string>
    <string name="appmetrica_set_admin">Назначение на админку.</string>
    <string name="appmetrica_set_leader">Назначение на лидерку.</string>
    <string name="appmetrica_successfully_opened_container">Если игрок открыл контейнер и получил окупной приз.</string>
    <string name="appmetrica_task_completed">Выполнил задание BLACK PASS и попал в окно с получением награды</string>
    <string name="appmetrica_won_in_casino">Сумма выигрыша ставки в казино больше 50К</string>
    <string name="audio_author_name">Исполнитель - Название</string>
    <string name="audio_author_track">Исполнитель - Песня</string>
    <string name="audio_page_one">Страница 1</string>
    <string name="audio_press_play_to_listen">Просто нажмите PLAY для прослушивания</string>
    <string name="audio_price">500 ₽</string>
    <string name="autofill">Autofill</string>
    <string name="banner_body_text_1_1">"Выполняйте задания, прокачивайте "</string>
    <string name="banner_body_text_1_2">"BLACK PASS "</string>
    <string name="banner_body_text_1_3">и получайте новые награды сезона</string>
    <string name="banner_body_text_2_1">"Купите "</string>
    <string name="banner_body_text_2_2">"BLACK PASS PREMIUM "</string>
    <string name="banner_body_text_2_3">"и получайте "</string>
    <string name="banner_body_text_2_4">"
в 2 раза "</string>
    <string name="banner_body_text_2_5">больше наград!</string>
    <string name="banner_body_text_2_ready_text">Купите BLACK PASS PREMIUM и получайте в 2 раза больше наград!</string>
    <string name="banner_body_text_3_1">"еще больше наград в "</string>
    <string name="banner_body_text_3_2">black pass premium deluxe</string>
    <string name="banner_button_show_prices">Получить</string>
    <string name="banner_new_season">НОВЫЙ СЕЗОН</string>
    <string name="banner_title_prize_1">"+10 открытых уровней
в BLACK PASS"</string>
    <string name="banner_title_prize_1_1">+10 открытых уровней</string>
    <string name="banner_title_prize_1_2">в BLACK PASS</string>
    <string name="banner_title_prize_1_3">"в "</string>
    <string name="banner_title_prize_1_4">BLACK PASS</string>
    <string name="banner_title_prize_1_html">"+10 открытых уровней
в &lt;font color=#E2310C>BLACK PASS&lt;/font>"</string>
    <string name="banner_title_prize_2">"VIP PLATINUM
НА 15 ДНЕЙ"</string>
    <string name="banner_title_prize_deluxe_market">911 Drakar</string>
    <string name="banner_title_prize_deluxe_market_banner">Porsche 911 Drakar</string>
    <string name="banner_title_prize_deluxe_site">911 Drakar</string>
    <string name="common_play">Играть</string>
    <string name="common_settings">Настройки</string>
    <string name="fragment_main_edittext_nickname_allowed_characters">abcdefghijklmnopqrstuvwxyz_ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="fragment_main_enter_name">"Введите имя
персонажа"</string>
    <string name="fragment_main_enter_surname">"Введите фамилию
персонажа"</string>
    <string name="launcher_no_close">Нет, закрыть</string>
    <string name="launcher_yes_download">Да, загрузить</string>
    <string name="loading_percent">Загрузка файлов игры…</string>
    <string name="sdk_pay_cancel_action">Отменить</string>
    <string name="sdk_pay_coast_title">Стоимость</string>
    <string name="sdk_pay_coupon_connection_error_message">Проверьте подключение и обновите страницу</string>
    <string name="sdk_pay_coupon_connection_error_title">Нет интернета</string>
    <string name="sdk_pay_coupon_connection_update">Обновить</string>
    <string name="sdk_pay_discount_title">Скидка</string>
    <string name="sdk_pay_email_hint">E-mail</string>
    <string name="sdk_pay_enter_email_text">Введите электронную почту</string>
    <string name="sdk_pay_failure_receipt_sending_text">"Не удалось отправить чек на почту.
Попробуйте ещё раз"</string>
    <string name="sdk_pay_retry_action">Повторить</string>
    <string name="sdk_pay_send_check_text">Отправить чек</string>
    <string name="sdk_pay_to_pay_title">К оплате</string>
</resources>