<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="?sdk_pay_surface_primary" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/email_input_content" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:textColor="?sdk_pay_text_primary" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/sdk_pay_spacer_s" android:text="@string/sdk_pay_enter_email_text" android:maxLines="1" style="@style/Subheadline10" />
        <com.google.android.material.textfield.TextInputLayout android:id="@id/email_field" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sdk_pay_spacer_xs" android:layout_marginHorizontal="@dimen/sdk_pay_spacer_l" app:boxBackgroundColor="?sdk_pay_surface_input" app:boxCornerRadiusBottomEnd="@dimen/sdk_pay_border_radius_m" app:boxCornerRadiusBottomStart="@dimen/sdk_pay_border_radius_m" app:boxCornerRadiusTopEnd="@dimen/sdk_pay_border_radius_m" app:boxCornerRadiusTopStart="@dimen/sdk_pay_border_radius_m" app:boxStrokeColor="?sdk_pay_stroke_accent" app:boxStrokeWidth="0.0dip" app:endIconDrawable="@drawable/sdk_pay_ic_clear" app:endIconMode="clear_text" app:endIconTint="?sdk_pay_icon_tertiary" app:helperTextTextAppearance="@style/Body.Body30" app:helperTextTextColor="?sdk_pay_text_negative" app:hintEnabled="false" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText android:theme="@style/EmailTextInputHandle" android:textColor="?sdk_pay_text_primary" android:textColorHint="?sdk_pay_text_secondary" android:id="@id/email_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/sdk_pay_email_hint" android:maxLines="1" android:singleLine="true" android:inputType="textEmailAddress" android:imeOptions="actionSend" android:textCursorDrawable="@drawable/sdk_pay_custom_email_cursor" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/error_message_content" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/sdk_pay_spacer_xxxl">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="@dimen/sdk_pay_receipt_sending_error_image_size" android:layout_height="@dimen/sdk_pay_receipt_sending_error_image_size" android:src="@drawable/sdk_pay_illustration_fail_result" android:importantForAccessibility="no" />
        <TextView android:textColor="?sdk_pay_text_primary" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sdk_pay_spacer_m" android:text="@string/sdk_pay_failure_receipt_sending_text" android:layout_marginHorizontal="@dimen/sdk_pay_spacer_l" style="@style/Body.Body10" />
    </LinearLayout>
    <Button android:textColor="?sdk_pay_text_quaternary_constant" android:layout_gravity="bottom" android:id="@id/send_receipt_button" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/sdk_pay_spacer_s" android:text="@string/sdk_pay_send_check_text" android:backgroundTint="?sdk_pay_surface_accent" android:layout_marginHorizontal="@dimen/sdk_pay_spacer_l" style="@style/Theme.ActionButton" />
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/error_buttons_content" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="@dimen/sdk_pay_spacer_l">
        <Button android:textColor="?sdk_pay_text_quaternary_constant" android:layout_gravity="bottom" android:id="@id/retry_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/sdk_pay_spacer_s" android:text="@string/sdk_pay_retry_action" android:backgroundTint="?sdk_pay_surface_accent" style="@style/Theme.ActionButton" />
        <Button android:textColor="?sdk_pay_text_accent" android:layout_gravity="bottom" android:id="@id/cancel_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/sdk_pay_spacer_s" android:text="@string/sdk_pay_cancel_action" android:backgroundTint="?sdk_pay_surface_secondary" style="@style/Theme.ActionButton" />
    </LinearLayout>
    <com.google.android.material.progressindicator.CircularProgressIndicator android:layout_gravity="center" android:id="@id/receipt_sending_progress_indicator" android:visibility="gone" android:layout_width="@dimen/sdk_pay_progress_bar_size" android:layout_height="@dimen/sdk_pay_progress_bar_size" android:indeterminate="true" app:indicatorColor="?sdk_pay_icon_accent" app:trackCornerRadius="@dimen/sdk_pay_progress_bar_radius" />
</FrameLayout>