<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/sdk_pay_spacer_xs">
        <TextView android:textColor="?sdk_pay_text_primary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sdk_pay_coast_title" android:layout_weight="1.0" style="@style/Body.Body30" />
        <TextView android:textColor="?sdk_pay_text_primary" android:id="@id/details_original_price" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAlignment="textEnd" android:layout_marginStart="@dimen/sdk_pay_spacer_s" style="@style/Body.Body30" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/discount_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/sdk_pay_spacer_xs">
        <TextView android:textColor="?sdk_pay_text_primary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sdk_pay_discount_title" android:layout_weight="1.0" style="@style/Body.Body30" />
        <TextView android:textColor="?sdk_pay_rainbow_red" android:id="@id/discount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAlignment="textEnd" android:layout_marginStart="@dimen/sdk_pay_spacer_s" style="@style/Body.Body30" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/sdk_pay_spacer_xs">
        <TextView android:textStyle="bold" android:textColor="?sdk_pay_text_primary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sdk_pay_to_pay_title" android:layout_weight="1.0" style="@style/Subheadline20" />
        <TextView android:textStyle="bold" android:textColor="?sdk_pay_text_primary" android:id="@id/total_price" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAlignment="textEnd" android:layout_marginStart="@dimen/sdk_pay_spacer_s" style="@style/Subheadline20" />
    </LinearLayout>
</LinearLayout>