<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/main_activity_root" android:background="#ff08070c" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/backgroundImage" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/bg_welcome_img" android:contentDescription="@null" />
    <View android:background="@drawable/neizzir_glow_top_right" android:layout_width="440.0dip" android:layout_height="440.0dip" android:alpha="0.86" android:translationX="165.0dip" android:translationY="-165.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:background="@drawable/neizzir_glow_bottom_left" android:layout_width="400.0dip" android:layout_height="400.0dip" android:alpha="0.76" android:translationX="-150.0dip" android:translationY="150.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineHorizontalForButtons" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="56.0dip" />
    <com.blackhub.bronline.launcher.CustomEditTextForMainActivity android:theme="@style/EditTextMainFragment" android:textSize="11.0sp" android:textStyle="italic" android:textColor="#ffffffff" android:textColorHint="#80ffffff" android:gravity="center" android:id="@id/edit_text_nick" android:background="@drawable/neizzir_edit_text_bg" android:layout_width="140.0dip" android:layout_height="40.0dip" android:layout_margin="30.0dip" android:hint="@string/fragment_main_enter_name" android:singleLine="true" android:maxLength="23" android:digits="@string/fragment_main_edittext_nickname_allowed_characters" android:inputType="textCapSentences|textNoSuggestions" android:imeOptions="actionDone|flagNoFullscreen" android:fontFamily="@font/montserrat_regular" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" android:autofillHints="" android:importantForAutofill="no" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.blackhub.bronline.launcher.CustomEditTextForMainActivity android:theme="@style/EditTextMainFragment" android:textSize="11.0sp" android:textStyle="italic" android:textColor="#ffffffff" android:textColorHint="#80ffffff" android:gravity="center" android:id="@id/edit_text_nick2" android:background="@drawable/neizzir_edit_text_bg" android:layout_width="140.0dip" android:layout_height="40.0dip" android:hint="@string/fragment_main_enter_surname" android:singleLine="true" android:digits="@string/fragment_main_edittext_nickname_allowed_characters" android:inputType="textCapSentences|textNoSuggestions" android:imeOptions="actionDone|flagNoFullscreen" android:fontFamily="@font/montserrat_regular" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" android:layout_marginStart="10.0dip" android:autofillHints="" android:importantForAutofill="no" app:layout_constraintBottom_toBottomOf="@id/edit_text_nick" app:layout_constraintStart_toEndOf="@id/edit_text_nick" app:layout_constraintTop_toTopOf="@id/edit_text_nick" />
    <ImageButton android:id="@id/ib_info" android:background="@drawable/neizzir_button_secondary" android:visibility="gone" android:layout_width="40.0dip" android:layout_height="40.0dip" android:contentDescription="info" android:layout_marginStart="10.0dip" app:layout_constraintBottom_toBottomOf="@id/edit_text_nick2" app:layout_constraintStart_toEndOf="@id/edit_text_nick2" app:layout_constraintTop_toTopOf="@id/edit_text_nick2" />
    <androidx.appcompat.widget.AppCompatButton android:textColor="#ff08070c" android:id="@id/button_play" android:background="@drawable/neizzir_button_primary" android:layout_width="wrap_content" android:layout_height="44.0dip" android:layout_margin="30.0dip" android:text="@string/common_play" android:textAllCaps="false" android:fontFamily="@font/montserrat_bold" android:paddingStart="34.0dip" android:paddingEnd="34.0dip" app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalForButtons" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/guidelineHorizontalForButtons" />
    <androidx.appcompat.widget.AppCompatButton android:textColor="#ffffffff" android:id="@id/button_settings" android:background="@drawable/neizzir_button_secondary" android:layout_width="wrap_content" android:layout_height="44.0dip" android:text="@string/common_settings" android:textAllCaps="false" android:fontFamily="@font/montserrat_regular" android:paddingStart="24.0dip" android:paddingEnd="24.0dip" android:layout_marginStart="30.0dip" app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalForButtons" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/guidelineHorizontalForButtons" />
    <ImageButton android:id="@id/button_vk" android:background="@drawable/neizzir_button_secondary" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="1.0dip" android:contentDescription="vk" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageButton android:id="@id/button_discord" android:background="@drawable/neizzir_button_secondary" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="1.0dip" android:contentDescription="discord" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageButton android:id="@id/button_telegram" android:background="@drawable/neizzir_button_secondary" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="1.0dip" android:contentDescription="telegram" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="10.0sp" android:textStyle="italic" android:textColor="#ffffffff" android:id="@id/text_view_info_about_nickname" android:background="@drawable/neizzir_button_secondary" android:paddingTop="16.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:importantForAccessibility="no" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" android:layout_marginEnd="32.0dip" app:layout_constraintStart_toStartOf="@id/ib_info" app:layout_constraintTop_toBottomOf="@id/ib_info" />
    <View android:id="@id/bgBottomGradient" android:background="#00000000" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/_85sdp" app:layout_constraintBottom_toBottomOf="parent" />
    <ImageView android:id="@id/ivBRLogo" android:visibility="gone" android:layout_width="@dimen/_18sdp" android:layout_height="@dimen/_19sdp" android:importantForAccessibility="no" app:layout_constraintBottom_toBottomOf="@id/tvBlackRussia" app:layout_constraintEnd_toStartOf="@id/tvBlackRussia" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/tvBlackRussia" />
    <TextView android:id="@id/tvBlackRussia" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalForButtons" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toEndOf="@id/ivBRLogo" app:layout_constraintTop_toTopOf="@id/guidelineHorizontalForButtons" style="@style/MontserratBold14spOr11ssp" />
    <ProgressBar android:id="@id/progress_bar" android:visibility="gone" android:layout_width="42.0dip" android:layout_height="42.0dip" android:indeterminateDrawable="@drawable/neizzir_progress_indeterminate" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>