<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="#ff08070c" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/backgroundImage" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@null" />
    <View android:background="@drawable/neizzir_glow_top_right" android:layout_width="420.0dip" android:layout_height="420.0dip" android:alpha="0.85" android:translationX="155.0dip" android:translationY="-155.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:background="@drawable/neizzir_glow_bottom_left" android:layout_width="390.0dip" android:layout_height="390.0dip" android:alpha="0.78" android:translationX="-145.0dip" android:translationY="145.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <androidx.compose.ui.platform.ComposeView android:id="@id/cvFilesInfoList" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_margin="5.0dip" app:layout_constraintBottom_toTopOf="@id/tv_br" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textColor="#e6ffffff" android:gravity="center" android:id="@id/tv_size_of_update" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/MontserratRegular12spOr9ssp" />
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#f2ffffff" android:gravity="center" android:id="@id/tv_br" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="Оптимизация, качество - NEIZZIR" android:includeFontPadding="false" android:fontFamily="@font/montserrat_bold" android:layout_marginStart="28.0dip" android:layout_marginEnd="28.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:id="@id/tv_br_2" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <com.blackhub.bronline.game.common.roundcornerprogressbar.RoundCornerProgressBar android:id="@id/progress_bar" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="3.0dip" android:layout_marginBottom="@dimen/_28wdp" android:layout_marginStart="64.0dip" android:layout_marginEnd="64.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:rcAnimationEnable="true" app:rcAnimationSpeedScale="2.4" app:rcBackgroundColor="#2affffff" app:rcBackgroundPadding="0.0dip" app:rcMax="100.0" app:rcProgress="0.0" app:rcProgressColor="#ff00b7a3" app:rcRadius="2.0dip" app:rcReverse="false" app:rcSecondaryProgress="0.0" app:rcSecondaryProgressColor="#3300b7a3" />
    <TextView android:textStyle="italic" android:textColor="#e6ffffff" android:id="@id/loading_text" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/loading_percent" app:layout_constraintBottom_toTopOf="@id/progress_bar" app:layout_constraintStart_toStartOf="@id/progress_bar" style="@style/MontserratRegular14spOr11ssp" />
    <TextView android:textStyle="italic" android:textColor="#e6ffffff" android:id="@id/loading_percent" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" app:layout_constraintBottom_toTopOf="@id/progress_bar" app:layout_constraintEnd_toEndOf="@id/progress_bar" style="@style/MontserratRegular14spOr11ssp" />
    <androidx.appcompat.widget.AppCompatButton android:textColor="#ff08070c" android:id="@id/button_repeat" android:background="@drawable/neizzir_button_primary" android:layout_width="wrap_content" android:layout_height="40.0dip" android:minHeight="40.0dip" android:text="@string/launcher_yes_download" android:textAllCaps="false" android:fontFamily="@font/montserrat_bold" android:paddingStart="22.0dip" android:paddingEnd="22.0dip" app:layout_constraintBottom_toBottomOf="@id/progress_bar" app:layout_constraintEnd_toEndOf="@id/progress_bar" />
    <androidx.appcompat.widget.AppCompatButton android:textColor="#ffffffff" android:id="@id/button_cancel" android:background="@drawable/neizzir_button_secondary" android:layout_width="wrap_content" android:layout_height="40.0dip" android:minHeight="40.0dip" android:text="@string/launcher_no_close" android:textAllCaps="false" android:fontFamily="@font/montserrat_regular" android:paddingStart="22.0dip" android:paddingEnd="22.0dip" app:layout_constraintBottom_toBottomOf="@id/progress_bar" app:layout_constraintStart_toStartOf="@id/progress_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>